# rati

./: Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: push_docker_image.yml
src/: archive.rs  main.rs
