[package]
name = "rati"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "rati"
readme = "README.md"
repository = "https://github.com/Stepan Kizim/rati"
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
axum = "0.8"
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
